syntax = "proto3";

package didcomm.messaging;

import "security.proto";

service DIDComm {
    rpc Unary(DCMessage) returns (DCMessage);

    rpc UnarySigned(SignedMessage) returns (SignedMessage);

    rpc ServerStreaming(DCMessage) returns (stream DCMessage);

    rpc ClientStreaming(stream DCMessage) returns (DCMessage);

    rpc BidirectionalStraming(stream DCMessage) returns (stream DCMessage);
}